# bagtracker

./: README.md  next.config.ts  package.json
app/: globals.css  layout.tsx  page.tsx  page.txt
app/api/bags/: route.ts
app/api/trace/: route.ts
app/trace/: page.tsx
lib/flow/: contracts.ts  engine.ts  sample.ts
services/: Cargo.toml
services/api/: Cargo.toml
services/api/src/: main.rs
services/bot/: Cargo.toml
services/bot/src/: main.rs
services/flow-engine/: Cargo.toml
services/flow-engine/src/: lib.rs
services/indexer/: Cargo.toml
services/indexer/src/: main.rs
services/shared-contracts/: Cargo.toml
services/shared-contracts/src/: lib.rs
